# stk-files

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILLS.md  mkdocs.yml  pyproject.toml
.claude/skills/: stk-attitude-format.md  stk-ephemeris-format.md  stk-interval-format.md  stk-sensor-format.md
.github/workflows/: release.yml
docs/: api.md  attitude.md  cli.md  ephemeris.md  index.md  interval.md  sensor.md
src/stk_files/: __init__.py  __main__.py  _coerce.py  _formatting.py  _gaps.py  _parser.py  _types.py  _validation.py  _writer.py  attitude.py  cli.py  ephemeris.py  files.py  formatters.py  funcs.py  interval.py  sensor.py  typing.py  validators.py
src/stk_files/cli/: __main__.py  main.py
stk_files/: base.py
stkfiles/: __init__.py  base.py  files.py  formatters.py  func.py  funcs.py  times.py  typing.py  validators.py
stkfiles/cli/: __main__.py  data2a.py  main.py  utils.py
tests/: strategies.py  test_attitude.py  test_cli.py  test_coerce.py  test_conversions.py  test_ephemeris.py  test_formatters.py  test_formatting.py  test_gaps.py  test_interval.py  test_read.py  test_roundtrip.py  test_sensor.py  test_times.py  test_validation.py  test_validators.py  test_writer.py
