[build-system]
requires = ["setuptools>=45", "setuptools_scm>=8.0", "wheel"]

[project]
name = "stkfiles"
description = "Create select SystemsToolKit (STK) data files"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
requires-python = ">=3.6"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.16",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
repository = "https://github.com/jolsten/stkfiles"

[project.optional-dependencies]
dev = [
  "build",
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel",
  "mkdocs",
  "mkdocstrings",
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["stkfiles"]

[tool.setuptools_scm]
version_file = "stkfiles/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=stkfiles --cov-report html"
testpaths = [
    "tests",
]
