[project]
name = "stk-files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "python-dateutil>=2",
]

[project.scripts]
stk-files = "stk_files:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.127.5",
    "pytest>=8.3.5",
]
